<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_teal"
    tools:context=".UserRegister"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="504dp"
        android:layout_height="730dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rect" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/effortless_billing_solution"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up_to_continue"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />


    <EditText
        android:id="@+id/enterName_id"
        android:layout_width="306dp"
        android:layout_height="42dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:textColor="@color/black"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        android:autofillHints="" />


    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />


    <EditText
        android:id="@+id/enterEmail_id"
        android:layout_width="309dp"
        android:layout_height="45dp"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />


    <EditText
        android:id="@+id/enterPassword_id_registerpg"
        android:layout_width="307dp"
        android:layout_height="38dp"
        android:layout_marginTop="416dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <ImageButton
        android:id="@+id/passwordToggle"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_password_visibility"


        android:src="@drawable/baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="@+id/enterPassword_id_registerpg"
        app:layout_constraintEnd_toEndOf="@+id/enterPassword_id_registerpg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/enterPassword_id_registerpg"
        app:layout_constraintWidth_percent="0.15" />

    <EditText
        android:id="@+id/enterMobile_id"
        android:layout_width="310dp"
        android:layout_height="43dp"
        android:layout_marginTop="316dp"
        android:ems="10"
        android:hint="@string/enter_mobile_no"
        android:textColor="@color/black"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:text="@string/mobile"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />


    <ImageView
        android:id="@+id/signup_btn_id"
        android:layout_width="305dp"
        android:layout_height="49dp"
        android:onClick="movetoBusinessPage"
        android:layout_marginTop="464dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/signup" />


    <ImageView
        android:id="@+id/login_btn_register_id"
        android:layout_width="293dp"
        android:layout_height="43dp"
        android:layout_marginTop="512dp"
        android:onClick="BackToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/lofin" />


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="572dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/divisionline" />


    <TextView
        android:id="@+id/continue_google_regsiter"
        android:layout_width="217dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/continue_with"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        tools:ignore="DuplicateIds"
        app:drawableEndCompat="@drawable/google_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>